test/invalid/baseline/record-single.txt
Syntax error at line 2 in record-single.widl, since `interface Foo`:
 foo(record<DOMString> param);
                     ^ Missing comma after record key type
